# Vectorpack_cpp

./: CMakeLists.txt  README.md  default.nix
src/: main_vectorpack.cpp
src/algos/: algo_utils.cpp  algos_BinCentric.cpp  algos_BinCentric.hpp  algos_ItemCentric.cpp  algos_ItemCentric.hpp  algos_MultiBin.cpp  algos_MultiBin.hpp  base_algo.cpp  base_algo.hpp  lower_bounds.cpp  lower_bounds.hpp  utils.cpp  utils.hpp  weights_measures_scores.cpp  weights_measures_scores.hpp
src/lib/: bin.cpp  bin.hpp  instance.cpp  instance.hpp  item.cpp  item.hpp
